syntax = "proto3";

package user;

import "common.proto";

option go_package = "github.com/cqchien/ecomerce-rec/backend/proto";

// User Service - manages user profiles and preferences
service UserService {
  // Get user profile
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  
  // Update user profile
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  
  // List user addresses
  rpc ListAddresses(ListAddressesRequest) returns (ListAddressesResponse);
  
  // Add address
  rpc AddAddress(AddAddressRequest) returns (AddAddressResponse);
  
  // Update address
  rpc UpdateAddress(UpdateAddressRequest) returns (UpdateAddressResponse);
  
  // Delete address
  rpc DeleteAddress(DeleteAddressRequest) returns (DeleteAddressResponse);
  
  // Get user preferences
  rpc GetPreferences(GetPreferencesRequest) returns (GetPreferencesResponse);
  
  // Update preferences
  rpc UpdatePreferences(UpdatePreferencesRequest) returns (UpdatePreferencesResponse);
  
  // Wishlist operations
  rpc GetWishlist(GetWishlistRequest) returns (GetWishlistResponse);
  rpc AddToWishlist(AddToWishlistRequest) returns (AddToWishlistResponse);
  rpc RemoveFromWishlist(RemoveFromWishlistRequest) returns (RemoveFromWishlistResponse);
}

// User profile
message UserProfile {
  string id = 1;
  string email = 2;
  string name = 3;
  string phone = 4;
  string avatar = 5;
  common.Timestamp created_at = 6;
  common.Timestamp updated_at = 7;
}

// User preferences
message UserPreferences {
  string user_id = 1;
  bool email_notifications = 2;
  bool sms_notifications = 3;
  bool marketing_emails = 4;
  string language = 5;
  string currency = 6;
  common.Timestamp updated_at = 7;
}

// Wishlist item
message WishlistItem {
  string id = 1;
  string user_id = 2;
  string product_id = 3;
  common.Timestamp added_at = 4;
}

// Get profile request
message GetProfileRequest {
  string user_id = 1;
}

message GetProfileResponse {
  UserProfile profile = 1;
}

// Update profile request
message UpdateProfileRequest {
  string user_id = 1;
  optional string name = 2;
  optional string phone = 3;
  optional string avatar = 4;
}

message UpdateProfileResponse {
  UserProfile profile = 1;
}

// List addresses request
message ListAddressesRequest {
  string user_id = 1;
}

message ListAddressesResponse {
  repeated common.Address addresses = 1;
}

// Add address request
message AddAddressRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string address_line1 = 4;
  string address_line2 = 5;
  string city = 6;
  string state = 7;
  string postal_code = 8;
  string country = 9;
  string phone = 10;
  bool is_default = 11;
}

message AddAddressResponse {
  common.Address address = 1;
}

// Update address request
message UpdateAddressRequest {
  string user_id = 1;
  string address_id = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  optional string address_line1 = 5;
  optional string address_line2 = 6;
  optional string city = 7;
  optional string state = 8;
  optional string postal_code = 9;
  optional string country = 10;
  optional string phone = 11;
  optional bool is_default = 12;
}

message UpdateAddressResponse {
  common.Address address = 1;
}

// Delete address request
message DeleteAddressRequest {
  string user_id = 1;
  string address_id = 2;
}

message DeleteAddressResponse {
  bool success = 1;
}

// Get preferences request
message GetPreferencesRequest {
  string user_id = 1;
}

message GetPreferencesResponse {
  UserPreferences preferences = 1;
}

// Update preferences request
message UpdatePreferencesRequest {
  string user_id = 1;
  optional bool email_notifications = 2;
  optional bool sms_notifications = 3;
  optional bool marketing_emails = 4;
  optional string language = 5;
  optional string currency = 6;
}

message UpdatePreferencesResponse {
  UserPreferences preferences = 1;
}

// Get wishlist request
message GetWishlistRequest {
  string user_id = 1;
  common.PaginationRequest pagination = 2;
}

message GetWishlistResponse {
  repeated WishlistItem items = 1;
  common.PaginationResponse pagination = 2;
}

// Add to wishlist request
message AddToWishlistRequest {
  string user_id = 1;
  string product_id = 2;
}

message AddToWishlistResponse {
  WishlistItem item = 1;
}

// Remove from wishlist request
message RemoveFromWishlistRequest {
  string user_id = 1;
  string product_id = 2;
}

message RemoveFromWishlistResponse {
  bool success = 1;
}
